# Visual_Frontend

./: .gitignore  CMakeLists.txt  README.md  run.sh
output/: frontend_mono_log.binlog  frontend_stereo_log.binlog
src/: CMakeLists.txt  frontend.cpp  frontend.h  frontend_mono.cpp  frontend_mono.h  frontend_output.h  frontend_stereo.cpp  frontend_stereo.h
src/frontend_mono/: CMakeLists.txt  frontend_mono.cpp  frontend_mono.h
src/frontend_output/: CMakeLists.txt  frontend_output.cpp  frontend_output.h
src/frontend_stereo/: CMakeLists.txt  frontend_stereo.cpp  frontend_stereo.h
test/: test_euroc.cpp
